@@ -37,7 +37,7 @@ const char* geoip_name_by_id(int id);
 
 /** return id for an ip address */
 int geoip_id_by_ip(struct in_addr in);
-	
+
 /** return id by country code **/
 int geoip_id_by_code(const char *country);
 
